# matplotlib-cpp

./: .gitignore  CMakeLists.txt  README.md
cmake/Modules/: FindNumPy.cmake  project-config.cmake.in
src/: CMakeLists.txt  matplotlib-cpp.cpp
test/: CMakeLists.txt  minimal.cpp
